@@ -1,0 +1,44 @@
+\begin{thebibliography}{}
+
+\bibitem[Échelon, 2009]{cle2}
+Échelon, N. (2009).
+\newblock {\em La vie est un long fleuve tranquille}.
+\newblock Les Éditions du désastre.
+
+\bibitem[Œtingen, 2009]{cle8}
+Œtingen, N. (2009).
+\newblock {\em Un livre}.
+\newblock Les Éditions du désastre.
+
+\bibitem[Tarantin, 2009]{cle4}
+Tarantin, N. (2009).
+\newblock {\em En revenant de Tarascon}.
+\newblock Les Éditions du désastre.
+
+\bibitem[Διογένης, 2009]{cle1}
+Διογένης (2009).
+\newblock {\em Μήπως εἴδατε τὸ φανάρι μου;}.
+\newblock Τὰ σοφὰ βιβλία.
+
+\bibitem[Ἕλληνας, 2009]{cle7}
+Ἕλληνας, Μ. (2009).
+\newblock {\em Τὸ καλὸ παράδειγμα}.
+\newblock Ἐκδοτικὸς οἶκος «Δὲν βαριέσαι».
+
+\bibitem[Ζαχαρόπουλος, 2009]{cle5}
+Ζαχαρόπουλος, Ζ. (2009).
+\newblock {\em Μοῦ λένε νὰ μὴν κλαίω, μὰ τί νὰ
+  κάνω, ἀφοῦ σὲ χάνω}.
+\newblock Ἐκδόσεις τῶν χαμένων ἐλπίδων.
+
+\bibitem[天堂最新的章节表, 2009]{cle3}
+天堂最新的章节表, 格. (2009).
+\newblock {\em 製版・文書処理システム Ω}.
+\newblock Les Éditions du désastre.
+
+\bibitem[天王最新章, 2009]{cle6}
+天王最新章, 节. (2009).
+\newblock {\em 製版・文書処理システム Ω}.
+\newblock Les Éditions du désastre.
+
+\end{thebibliography}
