@@ -1,0 +1,48 @@
+
+@book{cle1,
+	Author = {Διογένης},
+	Publisher = {Τὰ σοφὰ βιβλία},
+	Title = {Μήπως εἴδατε τὸ φανάρι μου;},
+	Year = {2009}}
+
+@book{cle2,
+	Author = {Échelon, Nicolas},
+	Publisher = {Les Éditions du désastre},
+	Title = {La vie est un long fleuve tranquille},
+	Year = {2009}}
+
+@book{cle3,
+	Author = {天堂最新的章节表, 格的儿子},
+	Publisher = {Les Éditions du désastre},
+	Title = {製版・文書処理システム Ω},
+	Year = {2009}}
+
+@book{cle4,
+	Author = {Tarantin, Nicolas},
+	Publisher = {Les Éditions du désastre},
+	Title = {En revenant de Tarascon},
+	Year = {2009}}
+
+@book{cle5,
+	Author = {Ζαχαρόπουλος, Ζαχαρίας},
+	Publisher = {Ἐκδόσεις τῶν χαμένων ἐλπίδων},
+	Title = {Μοῦ λένε νὰ μὴν κλαίω, μὰ τί νὰ κάνω, ἀφοῦ σὲ χάνω},
+	Year = {2009}}
+
+@book{cle6,
+	Author = {天王最新章, 节列表},
+	Publisher = {Les Éditions du désastre},
+	Title = {製版・文書処理システム Ω},
+	Year = {2009}}
+
+@book{cle7,
+	Author = {Ἕλληνας, Μῆτσος},
+	Publisher = {Ἐκδοτικὸς οἶκος «Δὲν βαριέσαι»},
+	Title = {Τὸ καλὸ παράδειγμα},
+	Year = {2009}}
+
+@book{cle8,
+	Author = {Œtingen, Nicolas},
+	Publisher = {Les Éditions du désastre},
+	Title = {Un livre},
+	Year = {2009}}
